<resources>
    <string name="app_name">ContactsAssistant</string>
    
    <!-- menu strings -->
    <string name="action_settings">Ustawienia</string>
    <string name="sort_in_alphabetical_order">Sortowanie alfabetyczne: A-Z</string>
    <string name="sort_by_services_count_ascending_order">Sortowanie wg ilości zleceń: A-Z</string>
    <string name="sort_by_services_count_descending_order">Sortowanie wg ilości zleceń: Z-A</string>
    <string name="sort_by_all_services_cost_ascending_order">Sortowanie wg kosztu zleceń: A-Z</string>
    <string name="sort_by_all_services_cost_descending_order">Sortowanie wg kosztu zleceń: Z-A</string>
    <string name="sort_by_service_cost_per_hour_ascending_order">Sortowanie wg kosztu zleceń/h: A-Z</string>
    <string name="sort_by_service_cost_per_hour_descending_order">Sortowanie wg kosztu zleceń/h: Z-A</string>

    <!-- Strings for main activity -->
    <string name="contacts">Kontakty</string>
    <string name="tmp">tmp</string>

    <!-- Strings for contacts activity -->
    <string name="title_activity_contacts">Kontakty</string>
    <string name="title_activity_tmp">Tmp</string>

    <!-- Strings for contactDetail activity -->
    <string name="title_activity_contact_detail">Szczegóły kontaktu</string>
    <string name="image_description">Zdjęcie</string>
    <string name="edit_button_name">Edytuj</string>
    <string name="cancel_button_name">Anuluj</string>
    <string name="save_button_name">Zapisz</string>
    <string name="address">Adres</string>
    <string name="notes">Notatki</string>
    <string name="services_count_label">Ilość usług:</string>
    <string name="services_cost_label">Koszt usług:</string>
    <string name="services_cost_per_hour_label">Średni koszt usług/h:</string>
    <string name="average_service_cost">Średni koszt usługi:</string>
    <string name="open_services_panel_button">Przejdź do usług</string>

    <!-- Strings for editContactDetails Activity -->
    <string name="title_activity_edit_contact_details">Edycja kontaktu</string>
    <string name="title_activity_add_contact_details">Dodawanie kontaktu</string>
    <string name="contact_name">Imię i nazwisko</string>
    <string name="telephone_number">Telefon</string>
    <string name="email_address">Adres e-mail</string>
    <string name="empty_contact_name">Nazwa kontaktu nie może być pusta!</string>
    <string name="empty_contact_phone">Numer telefonu nie może być pusty!</string>

    <!-- Strings for notes activity  -->
    <string name="title_activity_notes">Notatki</string>

    <!-- Strings for services -->
    <string name="title_activity_services_panel">Usługi</string>
    <string name="title_activity_service_detail">Szczegóły usługi</string>
    <string name="service_cost_label">Koszt:</string>

    <!-- Strings for menus -->
    <string name="deleteContact">Usuń</string>
    <string name="editContact">Edytuj</string>
    <string name="search_title">Wyszukaj</string>

    <!-- Strings for editServiceDetails and serviceDetail Activity -->
    <string name="title_activity_edit_service_details">Edycja usługi</string>
    <string name="title_activity_add_service_details">Dodawanie usługi</string>
    <string name="service_name">Nazwa usługi</string>
    <string name="service_detail_name">Nazwa:</string>
    <string name="service_info">Opis usługi</string>
    <string name="service_detail_info">Brak informacji o usłudze</string>
    <string name="service_cost">Koszt usługi (zł)</string>
    <string name="service_detail_cost">Koszt:</string>
    <string name="service_time">Czas wykonania usługi (min)</string>
    <string name="service_detail_time">Czas (min):</string>
    <string name="no_data">b/d</string>
    <string name="empty_service_name">Nazwa usługi nie może być pusta!</string>
    <string name="empty_service_cost">Koszt usługi nie może być pusty!</string>
    <string name="empty_service_time">Czas wykonania usługi nie może być pusty!</string>

    <!-- general strings -->
    <string name="something_went_wrong_message">Coś poszło nie tak</string>
    <string name="unable_to_load_data_message">Nie udało się wczytać danych</string>
    <string name="too_large_number_message">Co najmniej jedna z wprowadzonych liczb jest zbyt duża</string>

    <string name="contact_removed_but_services_not">Błąd! Kontakt został usunięty, ale nie udało się usunać jego usług(jeśli istniały)</string>
    <string name="contact_and_services_not_removed">Błąd! Ani kontakt ani jego usługi nie zostały usunięte</string>
    <string name="unable_to_add_or_edit_contact">Nie udało się dodać lub edytować kontaktu</string>
    <string name="unable_to_add_or_edit_service">Nie udało się dodać lub edytować usługi</string>

    <string name="contact_removed_successfully">Kontakt oraz jego usługi zostały usunięte pomyślnie</string>
    <string name="contact_added_successfully">Kontakt dodany pomyślnie</string>
    <string name="unable_to_add_contact">Nie udało się dodać kontaktu</string>
    <string name="contact_updated">Kontakt został zaktualizowany</string>
    <string name="unable_to_update_contact">Nie udało się zaktualizować kontaktu</string>
    <string name="unable_to_load_contacts">Nie udało się załadować kontaktów</string>

    <string name="unable_to_remove_service">Błąd! Nie udało się usunąć usługi</string>

    <string name="service_removed_successfully">Usługa usunięta pomyślnie</string>
    <string name="service_added_successfully">Usługa dodana pomyślnie</string>
    <string name="unable_to_add_service">Nie udało się dodać usługi</string>
    <string name="service_updated">Usługa została zaktualizowana</string>
    <string name="unable_to_update_service">Nie udało się zaktualizować usługi</string>
    <string name="unable_to_load_services">Nie udało się załadować usług</string>

    <string name="currency">zł</string>
</resources>